--- a/users/src/index.scss
+++ b/users/src/index.scss
@@ -165,6 +165,8 @@ h3 {
 
 .App {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
 }
 
@@ -219,4 +221,11 @@ button {
   h1 {
     margin: 10px;
   }
+}
+
+.nav {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  margin: 10px;
 }
